--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
+        "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/socialite": "^5.23",
+        "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.29",
+        "league/flysystem-azure-blob-storage": "^3.30",
+        "league/omnipay": "^3.0",
+        "maatwebsite/excel": "^1.1",
+        "predis/predis": "^3.2",
+        "spatie/array-to-xml": "^3.4",
+        "spatie/laravel-newsletter": "^5.3",
+
+        "twilio/sdk": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -17,7 +29,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5"
     },
     "autoload": {
         "psr-4": {
